#ifndef COMMON_EVENT_HPP
#define COMMON_EVENT_HPP

class Event {
public:
	virtual ~Event() {}
};

#endif